video player, frame service stub

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 
     <script src="js/app.js"></script>
+    <script src="js/services/Frames.js" type="text/javascript" charset="utf-8"></script>
+    
     <script src="js/directives/MTLVideoPlayer.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/controllers/main.js"></script>
   </body>
