--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MTLv2</title>
     <link rel="stylesheet" href="css/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
+
   </head>
   <body ng-app="mtlApp">
     <div ng-view="">
@@ -20,7 +21,10 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="https://app.userapp.io/js/userapp.client.js"></script>
+    <script src="https://app.userapp.io/js/angularjs.userapp.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+<script src="bower_components/foundation/js/foundation/foundation.offcanvas.js" type="text/javascript" charset="utf-8"></script>
 
 
     <script src="js/app.js"></script>
