improve login, overall appearance

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
       ga('send', 'pageview');
 
     </script>
+    <script src="js/vendor/qrcode.js" type="text/javascript" charset="utf-8"></script>
       
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui/build/angular-ui.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-qrcode/qrcode.js" type="text/javascript" charset="utf-8"></script>
+    
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
