punchin hole's in canvasi!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       ga('send', 'pageview');
 
     </script>
-    <script src="js/vendor/qrcode.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/custom/qrcode.js" type="text/javascript" charset="utf-8"></script>
       
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
